data_processing/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cybersentinel-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cybersentinel
  template:
    metadata:
      labels:
        app: cybersentinel
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: proxy
          image: nginx:1.19
          ports:
            - containerPort: 443
          resources:
            limits:
              memory: "200Ki"
            requests:
              memory: "10Ki"
          livenessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 90
            timeoutSeconds: 10
            periodSeconds: 90
            failureThreshold: 3
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
          securityContext:
            readOnlyRootFilesystem: true
        - name: app
          image: daethyra/opendts:latest
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: data-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: cybersentinel-service
spec:
  selector:
    app: cybersentinel
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer
